--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,10 @@
     "sonarlint.connectedMode.project": {
         "connectionId": "https-robertol-ngrok-io",
         "projectKey": "roberto-luzardo-sonarsource_tools-and-scripts_127d9653-6911-4429-8655-8d3754cf3ae6"
-    }
+    },
+    "python.testing.pytestArgs": [
+        "web-api-examples"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
